<resources>
    <string name="app_name">RMPGoogleTask</string>
    <string name="tasks">Tasks</string>
    <string name="favourite">favourite</string>
    <string name="add">add</string>
    <string name="list1">List1</string>
    <string name="task">task</string>
    <string name="addlist">addList</string>
    <string name="enter_list">Enter list</string>
    <string name="task_name">Task name</string>
    <string name="description">Description</string>
    <string name="addbtn">addBtn</string>
    <string name="removetask">removeTask</string>
    <string name="subtask">SubTask</string>
    <string name="subtasks">Subtasks</string>
    <string name="removegroup">removeGroup</string>
    <string name="textview">TextView</string>
    <string name="ref">ref</string>
</resources>